fix: dashboard widgets spacing on mobile view

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -9,6 +9,14 @@
   height: 100%;
 }
 
+@media screen and (max-width: calc(#{$sm})) {
+  .dashboard-widgets {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 @media screen and (max-width: calc(#{$md})) {
   .dashboard {
     margin-top: 1rem;
